[fix] letter spacing and languages item size

--- a/joao-cv/src/components/languages/styles.module.scss
+++ b/joao-cv/src/components/languages/styles.module.scss
@@ -7,7 +7,7 @@
 
 @media print {
     .languageItem {
-        max-width: 50px;
+        // max-width: 50px;
         font-size: 0.8rem;
     }
 }
